--- a/backend/package.json
+++ b/backend/package.json
@@ -17,12 +17,15 @@
     "config": "^3.3.11",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "express": "^4.21.1",
     "express-validator": "^7.0.1",
+    "fs": "^0.0.1-security",
     "gravatar": "^1.8.2",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.3.1",
+    "mongoose": "^8.8.3",
+    "multer": "^1.4.5-lts.1",
+    "redis": "^4.7.0",
     "request": "^2.88.2"
   },
   "devDependencies": {
